# soothe-client-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
examples/: 01_hello.rs  02_stream_turn.rs  03_text_completion.rs  04_multi_turn.rs  05_pool_service.rs  06_jobs.rs  README.md
examples/common/: mod.rs
src/: client.rs  command_client.rs  config.rs  errors.rs  events.rs  heartbeat.rs  helpers.rs  intent_hints.rs  lib.rs  protocol.rs  session.rs  stream_terminal.rs  turn_boundary.rs  verbosity.rs
src/appkit/: classifier.rs  daemon_session.rs  mod.rs  pool.rs  query_gate.rs  session_store.rs  turn_boundary.rs  turn_runner.rs
tests/: integration.rs  unit_api.rs
